--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> index.html </title>
 </head>
 
-<body bgcolor="FF69B9">
+<body bgcolor="ff69b9">
 <font  color="black" face="century gothic">
 <center><H2> Center Programation </H2></center>
 <center><h3> prueba de como meter a navegar </h3></center>
@@ -17,9 +17,10 @@
 <h5>Realizaremnos las paginas web faciles de navegar con una presetnacion excepcional y una adaptacion a casi cualquier tipo de paginas <br>
 asi mismo ambien teniendo en cuenta la informacion de compra para poder meter a nevegar cualquier tipo de cosa y meter mas variedad.<br></h5>
 <br>
+
 <h3><b> Mision </b><h3><br>
 
-<h5>Dremos una muestra de lo que podemos hacer con el registro y asi las personas miren y <br>
+<h5>Daremos una muestra de lo que podemos hacer con el registro y asi las personas miren y <br>
 vean de lo que somos capaces dando una introduccion a nuestra empresa.</h5>
 <br>
 <img src="bio.jpg">
@@ -31,6 +32,6 @@ vean de lo que somos capaces dando una introduccion a nuestra empresa.</h5>
 
 
 
-ml>
+
 
 
